# hpb-lmhy

./: CLAUDE.md  README.md
.claude/agents/: tech-lead-architect.md
backend/: README.md  cv_parser.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_cv_parser.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/applications/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/contacts/: page.tsx
frontend/app/landing/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: contact-card.tsx  contact-details-modal.tsx  contact-form.tsx  dashboard-stats.tsx  job-application-form.tsx  job-card.tsx  job-details-modal.tsx  kanban-board.tsx  kanban-job-card.tsx  mobile-kanban-board.tsx  mobile-navigation.tsx  mobile-optimized-forms.tsx  navigation.tsx  quick-actions.tsx  recent-activity.tsx
frontend/components/analytics/: analytics-metrics.tsx  application-trends-chart.tsx  goals-progress.tsx  response-rate-chart.tsx  source-analytics-chart.tsx  time-to-response-chart.tsx
frontend/components/onboarding/: chatbot-step.tsx  completion-step.tsx  cv-upload-step.tsx  welcome-step.tsx
frontend_bak/: package.json
frontend_bak/src/app/: page.tsx
frontend_bak/src/app/analytics/: page.tsx
frontend_bak/src/app/contacts/: page.tsx
frontend_bak/src/app/jobs/: page.tsx
frontend_bak/src/app/onboarding/: page.tsx
frontend_bak/src/components/layout/: header.tsx  main-layout.tsx  mobile-nav.tsx
